changed the intro animations to use interpolate and spring to prevent flickering in the final video build.

--- a/src/Intro.css
+++ b/src/Intro.css
@@ -8,56 +8,15 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  animation-duration: 4s;
-  animation-name: colors;
-  animation-fill-mode: forwards;
 }
 
 .intro > h1 {
   color: white;
   font-size: 100px;
   margin: 50px 0;
-  animation-duration: 3.5s;
-  animation-name: slidein;
 }
 
 .intro .icon {
   color: white;
-  font-size: 250px;
-  animation-duration: 3.5s;
-  animation-name: grow;
-}
-
-@keyframes grow {
-  from {
-    font-size: 0
-  }
-  to {
-    font-size: 250px;
-  }
-}
-
-@keyframes slidein {
-  from {
-    margin-left: 100%;
-    width: 300%;
-  }
-
-  to {
-    margin-left: 0%;
-    width: 100%;
-  }
-}
-
-
-@keyframes colors {
-  0% {
-    background-color: rgb(145, 70, 255);
-  }
-  50% {
-    background-color: rgb(164, 120, 230);
-  }
-  100% {
-    background-color: rgb(100, 65, 165);
-  }
+  font-size: 200px;
 }
